@@ -1,5 +1,10 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.351 2005/10/10 20:38:03 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.352 2005/10/11 22:12:19 wolf31o2 Exp $
+
+  11 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/post-kmerge.sh:
+  Check for existence of files in /lib/modules before running depscan.sh. This
+  replaces the mips-specific check and makes it portable.
 
   10 Oct 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
